--- a/src/index.css
+++ b/src/index.css
@@ -3,5 +3,8 @@
 @tailwind utilities;
 
 body {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
   font-family: 'Montserrat', sans-serif;
 } 
